--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="99DOGS">
     <meta name="keywords" content="dog, e-commerce, angular">
     <meta name="author" content="Equipe 99DOGS">
-    <title>99 DOGS</title>
+    <title>99Dogs</title>
     <base href="/">
     <link rel="icon" type="image/x-icon" href="./assets/images/pet-icon.png">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
